# CreadorDocumentos

./: .gitignore  Makefile  langgraph.json  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_ops.pckl
data/inbox/processed/: clases25.txt
data/inbox/raw_classes/: clases14.txt
data/lessons/chunks/: src_2a6fd599eaf893bc_chunks.json
data/lessons/ordered/: src_2a6fd599eaf893bc.md
src/: __init__.py  runner_phase2.py  ui_app.py  watcher_phase1.py
src/core/: state_schema.py
src/core/graphs/: __init__.py  phase1_graph.py  phase2_graph.py
src/core/logic/: __init__.py
src/core/logic/phase1/: __init__.py  assembler.py  chunk_persister.py  class_redactor.py  context_indexer.py  master_planner.py  semantic_chunker.py  topic_scout.py  topic_sorter.py  writer_agent.py
src/core/logic/phase1/indexing/: hierarchical_chunker.py  hierarchical_index.py  multi_granular_embedder.py
src/core/logic/phase1/retrieval/: __init__.py  context_assembler.py  coverage_selector.py  facet_query_planner.py  fusion_scorer.py  multi_channel_retriever.py
src/core/logic/phase2/: __init__.py  atomic_generator.py  atomic_planner.py  epistemic_validator.py  graph_rag_builder.py  vector_indexer.py
src/core/storage/: __init__.py  bundles_fs.py  graph_store.py  parquet_store.py  vault_io.py  vector_store_a.py  vector_store_b.py  wal.py
src/data/drafts/: src_2a6fd599eaf893bc_draft.md  src_9296eaf7a4ac470a_draft.md
src/data/section_notes/src_2a6fd599eaf893bc/: 001_motivaciones-para-evaluar-riesgo-reputacional-perd.md  002_alta-tasa-de-fracaso-en-proyectos-de-ia-por-falta-.md  003_evaluacion-de-sistemas-multiagente-para-asegurar-v.md  004_metricas-de-evaluacion-de-respuestas-similitud-com.md  005_evaluacion-basada-en-datasets-pregunta-respuesta-e.md  006_estrategias-practicas-de-evaluacion-roles-personal.md  007_patrones-de-coordinacion-multiagente-aplicados-a-e.md  008_evaluacion-comparativa-benchmarking-entre-implemen.md  009_entornos-caoticos-y-objetivos-multiples-evaluacion.md  010_gobierno-de-datos-y-calidad-documental-como-causa-.md  011_evaluacion-en-rag-y-control-de-alucinaciones-con-b.md  012_metricas-especificas-de-rag-groundedness-y-relevan.md  013_uso-de-grafos-y-popularidad-del-conocimiento-como-.md  014_evaluacion-de-seguridad-en-agentes-conversacionale.md  _INDEX.md
src/data/section_notes/src_9296eaf7a4ac470a/: 000_riesgo-de-negocio-y-reputacion-como-motivacion-par.md  001_exito-y-fracaso-en-proyectos-de-ia-por-falta-de-ev.md  002_evaluacion-de-sistemas-multiagente-para-asegurar-v.md  003_controles-de-evaluacion-ia-vs-reglas-y-ml-tradicio.md  004_evaluacion-basada-en-datasets-pregunta-respuesta-e.md  005_metricas-de-evaluacion-de-calidad-conversacional-s.md  006_evaluacion-comparativa-benchmarking-de-implementac.md  007_patrones-multiagente-para-evaluacion-juez-voto-con.md  008_seguridad-en-agentes-conversacionales-evaluacion-a.md  009_entornos-caoticos-ambiguos-y-su-impacto-en-agentes.md  010_calidad-y-gobierno-de-datos-en-rag-ingesta-desde-c.md  011_metricas-especificas-para-rag-groundedness-y-relev.md  012_gestion-del-conocimiento-y-grafos-popularidad-como.md  _INDEX.md
src/data/temp/chunks/: chunk_001_topic_001.txt  chunk_002_topic_002.txt  chunk_003_topic_003.txt  chunk_004_topic_004.txt  chunk_005_topic_005.txt  chunk_006_topic_006.txt  chunk_007_topic_007.txt  chunk_008_topic_008.txt  chunk_009_topic_009.txt  chunk_010_topic_010.txt  chunk_011_topic_011.txt  chunk_012_topic_012.txt  chunk_013_topic_013.txt  chunk_014_topic_014.txt  src_2a6fd599eaf893bc_chunks_manifest.json
src/data/temp/hierarchical_index/src_9296eaf7a4ac470a/: chroma.sqlite3
src/data/temp/vector_db/src_2a6fd599eaf893bc/: chroma.sqlite3
