[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zk-foundry-static"
version = "0.1.0"
description = "Sistema multi-agente para generación de conocimiento Zettelkasten"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "ZK Foundry Team"}
]
keywords = ["zettelkasten", "langgraph", "knowledge-management", "obsidian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # LangChain ecosystem
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    
    # API y Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    
    # UI
    "streamlit>=1.38.0",
    
    # Datos y validación
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    
    # Persistencia
    "chromadb>=0.5.0",
    "networkx>=3.3",
    
    # Utilidades
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "rich>=13.8.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]
pdf = [
    "pymupdf>=1.24.0",
]
all = [
    "zk-foundry-static[dev,pdf]",
]

[project.scripts]
zk-watcher = "watcher_phase1:main"
zk-runner = "runner_phase2:main"

[project.urls]
Homepage = "https://github.com/example/zk-foundry-static"
Documentation = "https://github.com/example/zk-foundry-static#readme"
Repository = "https://github.com/example/zk-foundry-static"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["core", "watcher_phase1", "runner_phase2", "ui_app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]