[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zk-foundry-static"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0"
]

# === ESTA ES LA CLAVE DEL ARREGLO ===
[tool.hatch.build.targets.wheel]
packages = ["src/core"]  # Empaquetamos 'core' directamente

[tool.hatch.build.targets.wheel.force-include]
"src/core" = "core"      # Mapeamos src/core -> core en la raíz